# revelo

./: .gitignore  _countDown.csv  _countDown.txt  _scarcity.csv  _scarcity.txt  _socialProof.csv  _socialProof.txt  admin.py  algorithm.py  algorithm_v2.py  database.py  dataset(processed).csv  dataset(reference).csv  dataset(testing).csv  dataset(unprocessed).csv  dataset.txt  main.py  models.py  pyproject.toml  req.txt  requirements.txt  training_set copy.csv  webpage.py
api/: main.py
backend-env/: pyvenv.cfg
backend-env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
db/: db_setup.py
db/models/: webpage.py
src/: algorithm.py  database.py  main.py  models.py  webpage.py
src_api/: algorithm.py  database.py  main.py  models.py  webpage_endpoints.py
