[tool.poetry]
name = "revelo"
version = "0.1.0"
description = ""
authors = ["Jose Vargas <vjose3234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
SQLAlchemy = "^1.4.40"
psycopg2 = {extras = ["binary"], version = "^2.9.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"